cliente-servidor/cliente.tf
resource "aws_instance" "client" {
  ami           = "ami-0c55b159cbfafe1f0"  # AMI do Amazon Linux 2
  instance_type = "t2.micro"
  subnet_id     = aws_subnet.main_subnet.id
  security_groups = [aws_security_group.allow_traffic.name]

  tags = {
    Name = "Cliente"
  }
}
